Removed post-build event

--- a/WinForms/HypothesisTestingDesktop/HypothesisTestingDesktop.csproj
+++ b/WinForms/HypothesisTestingDesktop/HypothesisTestingDesktop.csproj
@@ -181,7 +181,8 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy /Y "C:\Users\James\Documents\Projects\HypothesisTestingDesktop\HypothesisTestingDesktop\bin\Release\Hypothesis Testing Calculator.exe" "C:\Users\James\Desktop"</PostBuildEvent>
+    <PostBuildEvent>
+    </PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
