--- a/Desktop/HypothesisTestingDesktop/HypothesisTestingDesktop.csproj
+++ b/Desktop/HypothesisTestingDesktop/HypothesisTestingDesktop.csproj
@@ -86,8 +86,6 @@
     <Compile Include="helpFormDesktop.Designer.cs">
       <DependentUpon>helpFormDesktop.cs</DependentUpon>
     </Compile>
-    <Compile Include="htMaths.cs" />
-    <Compile Include="htStrings.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextView.cs">
@@ -182,6 +180,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="htcIcon.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Common\HypothesisTestingCommon\HypothesisTestingCommon.csproj">
+      <Project>{5102a78c-6d8f-4c5b-8faa-73b936968f8f}</Project>
+      <Name>HypothesisTestingCommon</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
